Changes for 1.0alpha5:

 - support for macros in email subject and body
 - fixed zabbix_trapper. Added update_functions (itemid).
 - finally (!) removed include/sysinfo.h
 - source code became more structured
 - call to perror was changed to syslog where necessary 
 - zabbix_sucker will not print "Spent x seconds ..." to syslog
 
Changes for 1.0alpha4:

 - fixed EXECUTE function in sysinfo.c
   It will return FAIL when command not found.
 - added report of Status of Zabbix - report1.html
 - added Availability Report - report2.html
 - added hints on choosing right DB (PostgreSQL vs MySQL) to manual.txt
 - added section on reports in manual.txt
 - fixed "undefined $register" and other warnings in media.html
 - "netstat -an|grep LISTEN" was replaced by more efficient "netstat -ln|grep tcp"
   in zabbix_agent.c
 - critical value for disk space and number of inodes decreased to 100000000 
 - table "platforms" is not used anymore
 - removed platformid and related indexes from table items_template
 - directory upgrades/ created
 - directory create/data/ created
 - Chapter 6 (Upgrading) added to manual.txt
 - added notes for PostgreSQL to manual.txt
 - added key (userid) to table media (MySQL)
 - added key (triggerid) to table actions (MySQL)
 - added key (istrue) to table triggers (MySQL,PostgreSQL)
 - added key (nextcheck) to table items (MySQL,PostgreSQL)
 - added key (status) to table items (MySQL,PostgreSQL)
 - removed include/sysinfo.h
 - trigger update does not delete actions anymore
 - functionality of zabbix_alarmer transferred to zabbix_sucker.
   No need for zabbix_alarmer anymore !

Changes for 1.0alpha3:

 - fixed NODATA function
 - fixed bug with trigger updating in PHP frontend
 - added check for SMTP, FTP, SSH, TELNET, WEB, POP3, and IMAP 
   servers availability
 - fixed Trigger Status form
 - removed MySQL specific unix_timestamp() from SQL statements
 - added "Use of Zabbix" section to manual